[metadata]
name = weaverbird
version = 0.10.2

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    pydantic
    numexpr

[options.packages.find]
where = src

[options.extras_require]
playground =
  quart
  hypercorn
  pymongo[srv, tls] >= 3.3
  snowflake-connector-python[pandas]
dev =
  pytest >= 6.1.1, < 7
  pytest-cov >= 2.10.1, < 3
  black == 20.8b1
  flake8 == 3.8.4
  isort == 5.6.4
  mypy == 0.910
  types-python-dateutil
  pytest-mock >= 3.3.1, < 4
  toucan-connectors > 0 # required so we can use nosql_apply_parameters_to_query during tests
  pytest-benchmark >= 3.4.1, < 4
  docker == 5.0.0
  sqlalchemy == 1.4.22
  pymysql == 1.0.2
  cryptography == 3.4.7
  snowflake-connector-python[pandas]
  snowflake-sqlalchemy

[flake8]
exclude = __init__.py
inline-quotes = single
multiline-quotes = double
max-line-length = 100
ignore = E203, E266, E501, W503, W605

[mypy]
files = src/
exclude = weaverbird/backends/sql_translator
plugins = pydantic.mypy
follow_imports = silent
ignore_missing_imports = True
allow_redefinition = True
check_untyped_defs = True
